--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
           href="%PUBLIC_URL%/manifest.json"
           crossorigin="use-credentials"
     />
+
+    <!-- Font Awesome script -->
+    <script src="https://kit.fontawesome.com/b75c116a85.js"
+    crossorigin="anonymous"
+    >
+    </script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
