Change font family for h1 title

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
     
     <!-- Bootstrap 4.6.0 -->
     <link
